add product details

--- a/src/app/Component/header/header.component.css
+++ b/src/app/Component/header/header.component.css
@@ -1,5 +1,20 @@
+.navbar-brand {
+  font-size: 1.5rem;
+}
 
+.navbar-nav .nav-link {
+  font-size: 1.1rem;
+  margin-right: 15px;
+}
 
-/* .stick{
-    position: fixed;
-} */
+.navbar-nav .nav-item:last-child .nav-link {
+  margin-right: 0;
+}
+
+.navbar-nav .nav-item .fa-user {
+  margin-right: 5px;
+}
+
+.form-control {
+  width: 300px;
+}
