--- a/src/app/product-category/product-category.component.html
+++ b/src/app/product-category/product-category.component.html
@@ -1,11 +1,10 @@
-<p>product works!</p>
 <div class="container">
-  <h1 class="text-center mt-3">Our Products</h1>
+  <h1 class="text-center mt-3">Products</h1>
   <div class="row">
     <div *ngIf="isLoading">
       <app-loading-spinner></app-loading-spinner>
     </div>
-    <div class="col-md-4" *ngFor="let product of products">
+    <div class=" col-md-4" *ngFor="let product of categoryProducts">
       <div class="card">
         <img class="card-img-top" [src]="product.image" [alt]="product.title">
         <div class="card-body">
