--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <div class="logo">
+      <i style="font-size: 25px;" class="bi bi-bag-heart"></i>
+      <strong style="font-size: 30px;">Shoping</strong>
+    </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,10 +36,14 @@
           <a class="nav-link" *ngIf="isAuthed">{{ user?.fname | uppercase }} {{ user?.lname | uppercase }}</a>
         </li>
       </ul>
-      <form class="d-flex">
+      <button routerLink="/cart" class="btn ">
+        <i style="font-size: 30px;"  class="bi bi-cart-plus"></i>
+        <span class="badge bg-danger" style="font-size: 10px;">9</span>
+      </button>
+      <!-- <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> -->
     </div>
   </div>
 </nav>
