--- a/src/app/Component/login/login.component.css
+++ b/src/app/Component/login/login.component.css
@@ -1,3 +1,71 @@
-input.ng-invalid.ng-touched{
+.cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+form {
+    padding: 30px;
+    border-radius: 10px; 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+}
+
+form h1 {
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+}
+
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    border: 1px solid #f5c6cb;
+    border-radius: 5px;
+}
+
+.alert-danger p {
+    margin-bottom: 0;
+}
+
+.form-label {
+    font-weight: bold;
+}
+
+.form-control {
+    width: 100%;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ced4da;
+}
+
+.form-text {
+    color: #dc3545;
+    font-size: 14px;
+}
+
+.btn {
+    background-color: #28a745; 
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+   
+}
+
+.btn:hover {
+    background-color: #218838; 
+}
+
+#emailHelp {
+    font-size: 14px;
+}
+
+
+.ng-invalid.ng-touched input[type="email"],
+.ng-invalid.ng-touched input[type="password"] {
     border: 1px solid red;
 }
