--- a/src/app/SharedComponent/loading-spinner/loading-spinner.component.html
+++ b/src/app/SharedComponent/loading-spinner/loading-spinner.component.html
@@ -1,1 +1,3 @@
-<div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+<div>
+    <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+</div>
