--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -38,12 +38,9 @@
       </ul>
       <button routerLink="/cart" class="btn ">
         <i style="font-size: 30px;"  class="bi bi-cart-plus"></i>
-        <span class="badge bg-danger" style="font-size: 10px;">9</span>
+       <span class="badge bg-danger" style="font-size: 10px;" >{{cartProducts.length}}</span>
       </button>
-      <!-- <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> -->
+     
     </div>
   </div>
 </nav>
