--- a/src/app/Component/product/product.component.css
+++ b/src/app/Component/product/product.component.css
@@ -8,3 +8,17 @@
     transform: translateY(-5px);
   }
   
+  .alert {
+    position: fixed;
+    z-index: 3;
+    top: 5;
+    right: 0;
+    width: 300px;
+    margin: 20px; 
+    font-size: 20px;
+    text-align: center;
+    background-color: rgb(76, 162, 98);
+    color: #ffffff;
+  }
+  
+  
