--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -38,7 +38,7 @@
       </ul>
       <button routerLink="/cart" class="btn ">
         <i style="font-size: 30px;"  class="bi bi-cart-plus"></i>
-       <span class="badge bg-danger" style="font-size: 10px;" >{{cartLength}}</span>
+       <span class="badge bg-danger" style="font-size: 10px;" >{{cartlength}}</span>
       </button>
      
     </div>
