--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -26,11 +26,11 @@
           <a class="nav-link" (click)="onLogout()" *ngIf="isAuthed">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/category">Categories</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="products/category">Products</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/products">Products</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <i class="fa-solid fa-user"></i>
           <a class="nav-link" *ngIf="isAuthed">{{ user?.fname | uppercase }} {{ user?.lname | uppercase }}</a>
@@ -40,7 +40,7 @@
         <i style="font-size: 30px;"  class="bi bi-cart-plus"></i>
        <span class="badge bg-danger" style="font-size: 10px;" >{{cartlength}}</span>
       </button>
-     
+
     </div>
   </div>
 </nav>
