--- a/src/app/Component/product-details/product-details.component.html
+++ b/src/app/Component/product-details/product-details.component.html
@@ -13,7 +13,7 @@
         <p><strong>Price:</strong> {{ product.price }}</p>
         <p><strong>Quantity:</strong> {{ product.quantity }}</p>
         <p><strong>Colors:</strong> {{ product.colors.join(', ') }}</p>
-        <p><strong>Category:</strong> {{ product.category }}</p>
+        <p><strong>Category:</strong> {{categoryName}}</p>
         <p><strong>Company:</strong> {{ product.company }}</p>
         <p><strong>Sold:</strong> {{ product.sold }}</p>
       </div>
