commit some changes before pull admin dashboard updates

--- a/src/app/Component/admin-board/admin-board.component.html
+++ b/src/app/Component/admin-board/admin-board.component.html
@@ -5,6 +5,12 @@
             
              <li class="nav-item">
                 <button class="btn btn-primary" (click)="getProducts()">products</button>
+                <select class="form-control">
+                    <option value="">oper</option>
+                    <option value="1">link1</option>
+                    <option value="2">link2</option>
+                    <option value="3">link3</option>
+                </select>
             </li> 
             <li class="nav-item">
               <button class="btn btn-primary" (click)="getOrders()">orders</button>
