--- a/src/app/Component/categories/categories.component.css
+++ b/src/app/Component/categories/categories.component.css
@@ -1,3 +1,9 @@
-/* .col-md-3 {
+.category-border {
+  color: #198754;
 
-} */
+}
+
+.category-border:hover {
+  background-color: #198754;
+  color: white;
+}
