--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -2,17 +2,19 @@
   <div class="row">
     <!-- Sidebar with Categories -->
     <div class="col-md-3 justify-content-between">
-      <h3 class="text-center text-main">All Categories</h3>
-      <div *ngFor="let category of allCategories" class="category-border border text-center">
+      <h3 class="text-center text-main bg-success text-light rounded-2 p-2">All Categories</h3>
+      <div *ngFor="let category of allCategories"
+        class="category-border border text-center text-uppercase border-2 mb-2 rounded-2">
         <!-- Ensure that getSpecificCategory method is correctly called on click -->
-        <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2" [src]="category.image" [alt]="category.name">
+        <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2"
+          [src]="category.image" [alt]="category.name">
         <h1 class="h4 py-3 text-main">{{category.name}}</h1>
       </div>
     </div>
     <!-- Main Section for Products -->
     <div class="col-md-9">
       <div class="row">
-        <h3 class="text-center text-main">Products</h3>
+        <h3 class="text-center text-main  bg-success text-light rounded-2 p-2">Products</h3>
 
         <div class="col-md-4" *ngFor="let product of products">
           <!-- Display product details -->
