--- a/src/app/Component/admin-board/admin-board.component.css
+++ b/src/app/Component/admin-board/admin-board.component.css
@@ -181,7 +181,7 @@ mat-toolbar {
   position: relative;
   font-weight: 500;
   font-size: 2.5rem;
-  color: #936524;
+  color: #127103;
 }
 
 .cardBox .card .cardName {
@@ -196,7 +196,7 @@ mat-toolbar {
 }
 
 .cardBox .card:hover {
-  background: #936524;
+  background: #127103;
 }
 
 .cardBox .card:hover .numbers,
@@ -234,13 +234,13 @@ mat-toolbar {
 
 .cardHeader h2 {
   font-weight: 600;
-  color: #936524;
+  color: #127103;
 }
 
 .cardHeader .btn {
   position: relative;
   padding: 5px 10px;
-  background: #936524;
+  background: #127103;
   text-decoration: none;
   color: white;
   border-radius: 6px;
@@ -266,7 +266,7 @@ mat-toolbar {
 }
 
 .details .recentOrders table tbody tr:hover {
-  background: #936524;
+  background: #127103;
   color: white;
 }
 
@@ -298,7 +298,7 @@ mat-toolbar {
 
 .status.pending {
   padding: 2px 4px;
-  background: #e9b10a;
+  background: rgb(62, 230, 104);
   color: white;
   border-radius: 4px;
   font-size: 14px;
