--- a/src/app/Component/admin-board/admin-board.component.html
+++ b/src/app/Component/admin-board/admin-board.component.html
@@ -24,29 +24,11 @@
                   <li>
                       <a href="#">
                           <span class="icon">
-                              <mat-icon>woman</mat-icon>
                           </span>
                           <span class="title">Customers</span>
                       </a>
                   </li>
 
-                  <li>
-                      <a href="#">
-                          <span class="icon">
-                              <mat-icon>man</mat-icon>
-                          </span>
-                          <span class="title">Messages</span>
-                      </a>
-                  </li>
-
-                  <li>
-                      <a href="#">
-                          <span class="icon">
-                              <mat-icon>help</mat-icon>
-                          </span>
-                          <span class="title">Help</span>
-                      </a>
-                  </li>
 
                   <li>
                       <a href="#">
@@ -57,21 +39,12 @@
                       </a>
                   </li>
 
-                  <li>
-                      <a href="#">
-                          <span class="icon">
-                              <mat-icon>face</mat-icon>
-                          </span>
-                          <span class="title">Password</span>
-                      </a>
-                  </li>
-
                   <li (click)="logout()">
                       <a href="#">
                           <span class="icon">
                               <mat-icon>logout</mat-icon>
                           </span>
-                          <span class="title">Sign Out</span>
+                          <span class="title">logout</span>
                       </a>
                   </li>
               </ul>
@@ -98,7 +71,6 @@
               <img src="assets\home-img-1.png" alt="">
           </div>
       </mat-toolbar>
-      <!-- ======================= Cards ================== -->
       <div class="cardBox">
           <div class="card">
               <div>
@@ -138,28 +110,25 @@
                   <div class="numbers">${{totalSales}}</div>
                   <div class="cardName">Earning</div>
               </div>
-
-              <div class="iconBx">
-              <i class="fa-solid fa-money-bill-trend-up"></i>
-              </div>
           </div>
       </div>
-
+<div >
       <mat-tab-group>
-          <mat-tab label="Orders State">
-              <ng-template mat-tab-label>
-                  <mat-icon>man</mat-icon>
-                  <span style="font-weight: bolder; font-size: large;">User Data</span>
-              </ng-template>
-              <app-content></app-content>
-          </mat-tab>
-          <mat-tab label="Products">
-              <ng-template mat-tab-label>
-                  <mat-icon> sort</mat-icon>
-                  <span style="font-weight: bolder; font-size: large;"> Products </span>
-              </ng-template>
-              <app-product></app-product>
-          </mat-tab>
+        <mat-tab label="Orders State">
+          <ng-template mat-tab-label>
+            <span style="font-weight: bolder; font-size: large;">User Data</span>
+          </ng-template>
+          <br>
+          <app-content></app-content>
+        </mat-tab>
+        <mat-tab label="Products">
+          <ng-template mat-tab-label>
+            <span style="font-weight: bolder; font-size: large;"> Products </span>
+          </ng-template>
+          <br>
+          <app-product></app-product>
+        </mat-tab>
       </mat-tab-group>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+    </div>
+
+    </mat-sidenav-content>
