--- a/src/app/Component/content/content.component.css
+++ b/src/app/Component/content/content.component.css
@@ -98,6 +98,10 @@ tbody tr td:nth-child(3) {
   font-size: 14px;
   color: #999;
 }
+.status-dropdown {
+  position: relative;
+  z-index: 1; 
+}
 
 /* ====================== Responsive Design ========================== */
 @media (max-width: 768px) {
