--- a/src/app/Component/product/product.component.css
+++ b/src/app/Component/product/product.component.css
@@ -10,6 +10,13 @@
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
 }
+.add-product-btn {
+  width: 100%; /* Ensure it takes the full width of its container */
+  padding: 10px 20px; /* Adjust padding as needed */
+  margin-bottom: 20px; /* Add a margin for spacing */
+  text-align: center; /* Center the text within the button */
+  /* ... other button styles as you prefer */
+}
 
 .product-card img {
   width: 100%;
