--- a/src/app/Component/edit-product-dialog/edit-product-dialog.component.html
+++ b/src/app/Component/edit-product-dialog/edit-product-dialog.component.html
@@ -7,6 +7,6 @@
   <!-- Add more form fields for other product details such as price, description, etc. -->
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="data.product" cdkFocusInitial>Save</button>
+  <!-- <button mat-button [mat-dialog-close]="data.product" cdkFocusInitial>Save</button> -->
   <button mat-button (click)="onCancelClick()">Cancel</button>
 </div>
