--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -32,18 +32,25 @@
             </div>
         </div>
     </section> 
-    <section class="container-fluid  category">
-    <h2>Shop Popular Categoties</h2>
-      <div *ngFor="let category of allCategories"
+    
+    <section class="container-fluid category">
+        <h2 class="text-center mb-4">Shop Popular Categories</h2>
+        <div class="row justify-content-center">
+          <ng-container *ngFor="let category of allCategories">
+            <div class="col-md-4 mb-4">
+              <div class="category-border border text-center text-uppercase border-2 rounded-2">
+                <a [routerLink]="['/products/category']">
+                  <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2"
+                    src="../../../assets/project images/images (1).jpg" [alt]="category.name">
+                  <h1 class="h4 py-3 text-main">{{category.name}}</h1>
+                </a>
+              </div>
+            </div>
+          </ng-container>
+        </div>
+      </section>
       
-        class="category-border border text-center text-uppercase border-2 mb-2 rounded-2">
-        <a [routerLink]="['/products/category']">
-            <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2"
-            [src]="category.image" [alt]="category.name">
       
-        <h1 class="h4 py-3 text-main">{{category.name}}</h1>  </a>
-      </div>
-    </section>
     <section class="container-fluid customer-reviews">
         <h2>Customer Reviews</h2>
         
