--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link" routerLinkActive="active" routerLink="/login" *ngIf="!isAuthed">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" *ngIf="user?.role == 'user' "  routerLinkActive="active" routerLink="/products/category">Products</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/products/category">Products</a>
           </li>
         <li class="nav-item">
           <i class="fa-solid fa-user"></i>
