--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -1,4 +1,4 @@
-
+<!--
   <head>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -126,4 +126,4 @@
 
 
 
-  </body>
+  </body> -->
