--- a/src/app/Component/about-us/about-us.component.html
+++ b/src/app/Component/about-us/about-us.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="isLoading">
+  <app-loading-spinner></app-loading-spinner>
+</div>
 <div id="aboutUs">
   <div class="c1 container">
     <h2>About Us</h2>
