sort by price and category added

--- a/src/app/Component/add-product/add-product.component.html
+++ b/src/app/Component/add-product/add-product.component.html
@@ -1,4 +1,4 @@
-<form class="row g-3 " (ngSubmit)="AddProduct()" #addForm="ngForm">
+<!-- <form class="row g-3 " (ngSubmit)="AddProduct()" #addForm="ngForm">
   <div class="col-md-4">
     <label for="title" class="form-label">Product title</label>
     <input type="text" class="form-control" id="title" ngModel name="title" #title="ngModel" required>
@@ -74,4 +74,4 @@
   <div class="col-12">
     <button class="btn btn-primary" type="submit">Submit form</button>
   </div>
-</form>
+</form> -->
