--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -19,7 +19,19 @@
       <div class="row">
         <div class=" d-flex justify-content-between text-center text-main  bg-success text-light rounded-2 p-2">
           <h3 class="mt-2 ms-3">Products</h3>
-          <app-search (searchTextChanged)="onSearchTextChanged($event)"></app-search>
+          <div class="d-flex text-center">
+            <!-- search -->
+            <app-search (searchTextChanged)="onSearchTextChanged($event)"></app-search>
+            <!-- sort by price and category-->
+            <select class="form-select w-25 ms-2 text-success" aria-label="Sort By" [(ngModel)]="sortBy"
+              (change)="onSortChange(sortBy)">
+              <option disabled selected>Sort By</option>
+              <option value="price">Price (Low to High)</option>
+              <option value="price-desc">Price (High to Low)</option>
+              <option value="category">Category (A to Z)</option>
+            </select>
+            <!-- end sort -->
+          </div>
         </div>
         <div class="col-md-4" *ngFor="let product of products">
           <div class="card mb-3 custom-card"
