--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -1,7 +1,7 @@
-<!--
+
 <head>
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-
+</head>
 <body>
   <main>
     <section class="container-fluid">
@@ -13,93 +13,86 @@
                     </slide>
                     <slide>
                         <img src="../../../assets/project images/2.png" class="img-fluid">
-                      </slide>
-                  </carousel>
-</div>
-<div class="col-md-4">
-  <div class="row d-flex flex-column">
-    <div class="col-md-12 ">
-      <img src="../../../assets/project images/3.png" class="img-fluid" style="max-width: 100%; height: auto;">
-    </div>
-    <div class="col-md-12">
-      <img src="../../../assets/project images/4.png" class="img-fluid" style="max-width: 100%; height: auto;">
-    </div>
+                    </slide>
+          </carousel>
+        </div>
+        <div class="col-md-4">
+          <div class="row d-flex flex-column">
+            <div class="col-md-12 ">
+              <img src="../../../assets/project images/3.png" class="img-fluid" style="max-width: 100%; height: auto;">
+            </div>
+            <div class="col-md-12">
+              <img src="../../../assets/project images/4.png" class="img-fluid" style="max-width: 100%; height: auto;">
+            </div>
 
 
-  </div>
-</div>
-</div>
-</section>
-<section class="container-fluid  category">
-  <h2>Shop Popular Categoties</h2>
-  <div *ngFor="let category of allCategories"
-    class="category-border border text-center text-uppercase border-2 mb-2 rounded-2">
-    <a [routerLink]="['/products/category']">
-      <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2"
-        [src]="category.image" [alt]="category.name">
-
-      <h1 class="h4 py-3 text-main">{{category.name}}</h1>
-    </a>
-  </div>
-</section>
-<section class="container-fluid customer-reviews">
-  <h2>Customer Reviews</h2>
-
-  <carousel>
-</section>
-</section>
-<section class="container-fluid category">
-  <h2 class="text-center mb-4">Shop Popular Categories</h2>
-  <div class="row justify-content-center">
-    <ng-container *ngFor="let category of allCategories">
-      <div class="col-md-4 mb-4">
-        <div class="category-border border text-center text-uppercase border-2 rounded-2">
-          <a [routerLink]="['/products/category']">
-            <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2"
-              src="../../../assets/project images/images (1).jpg" [alt]="category.name">
-            <h1 class="h4 py-3 text-main">{{category.name}}</h1>
-          </a>
+          </div>
         </div>
       </div>
-    </ng-container>
-  </div>
-</section>
+    </section>
+    <section class="container-fluid  category">
+      <h2>Shop Popular Categoties</h2>
+      <div *ngFor="let category of allCategories"
+        class="category-border border text-center text-uppercase border-2 mb-2 rounded-2">
+        <a [routerLink]="['/products/category']">
+          <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2"
+            [src]="category.image" [alt]="category.name">
 
-<section class="container-fluid customer-reviews">
-  <h2>Customer Reviews</h2>
-  <carousel>
-    <slide>
-      <div class="review">
-        <img src="../../../assets/project images/person1.png">
-        <p class="quote">"This product is amazing! I love it."</p>
-        <p class="reviewer">- Doe</p>
-        <div class="rating">
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-        </div>
+          <h1 class="h4 py-3 text-main">{{category.name}}</h1>
+        </a>
       </div>
-    </slide>
-    <slide>
-      <div class="review">
-        <img src="../../../assets/project images/person2.png">
-        <p class="quote">"This product is amazing! I love it."</p>
-        <p class="reviewer">- John Doe</p>
-        <div class="rating">
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
+    </section>
+
+      <section class="container-fluid category">
+        <h2 class="text-center mb-4">Shop Popular Categories</h2>
+        <div class="row justify-content-center">
+          <ng-container *ngFor="let category of allCategories">
+            <div class="col-md-4 mb-4">
+              <div class="category-border border text-center text-uppercase border-2 rounded-2">
+                <a [routerLink]="['/products/category']">
+                  <img (click)="getSpecificCategory(category._id)" height="150" class="w-75 d-block mx-auto py-2"
+                    src="../../../assets/project images/images (1).jpg" [alt]="category.name">
+                  <h1 class="h4 py-3 text-main">{{category.name}}</h1>
+                </a>
+              </div>
+            </div>
+          </ng-container>
         </div>
-      </div>
-    </slide>
-  </carousel>
-</section>
+      </section>
 
-
+      <section class="container-fluid customer-reviews">
+        <h2>Customer Reviews</h2>
+        <carousel>
+          <slide>
+            <div class="review">
+              <img src="../../../assets/project images/person1.png">
+              <p class="quote">"This product is amazing! I love it."</p>
+              <p class="reviewer">- Doe</p>
+              <div class="rating">
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+              </div>
+            </div>
+          </slide>
+          <slide>
+            <div class="review">
+              <img src="../../../assets/project images/person2.png">
+              <p class="quote">"This product is amazing! I love it."</p>
+              <p class="reviewer">- John Doe</p>
+              <div class="rating">
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+                <span class="star">&#9733;</span>
+              </div>
+            </div>
+          </slide>
+        </carousel>
+      </section>
 </main>
 <footer class="footer">
   <div class="container">
@@ -150,4 +143,3 @@
   </div>
 </footer>
 </body>
-</body>-->
